<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="412dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button17"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_button"
                android:backgroundTint="@color/purple_200"
                android:onClick="onClearClick"
                android:text="@string/clear"
                android:textSize="30sp"
                app:backgroundTint="#BB86FC" />

            <Button
                android:id="@+id/button18"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_button"
                android:backgroundTint="@color/purple_200"
                android:onClick="onBackspaceClick"
                android:text="@string/backspace"
                android:textSize="30sp"
                app:backgroundTint="#BB86FC" />

            <Button
                android:id="@+id/button19"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_button"
                android:backgroundTint="@color/purple_200"
                android:onClick="onDigitPress"
                android:text="@string/percent"
                android:textSize="30sp"
                app:backgroundTint="#BB86FC" />

            <Button
                android:id="@+id/button20"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_button"
                android:backgroundTint="@color/purple_200"
                android:text="@string/sub"
                android:textSize="30sp"
                app:backgroundTint="#BB86FC" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_button"
                android:backgroundTint="@color/purple_200"
                android:onClick="onDigitPress"
                android:text="@string/seven"
                android:textSize="30sp"
                app:backgroundTint="#BB86FC" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_button"
                android:backgroundTint="@color/purple_200"
                android:onClick="onDigitPress"
                android:text="@string/eight"
                android:textSize="30sp"
                app:backgroundTint="#BB86FC" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_button"
                android:backgroundTint="@color/purple_200"
                android:onClick="onDigitPress"
                android:text="@string/nine"
                android:textSize="30sp"
                app:backgroundTint="#BB86FC" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_button"
                android:backgroundTint="@color/purple_200"
                android:text="@string/add"
                android:textSize="30sp"
                app:backgroundTint="#BB86FC" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_button"
                android:backgroundTint="@color/purple_200"
                android:onClick="onDigitPress"
                android:text="@string/four"
                android:textSize="30sp"
                app:backgroundTint="#BB86FC" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_button"
                android:backgroundTint="@color/purple_200"
                android:onClick="onDigitPress"
                android:text="@string/five"
                android:textSize="30sp"
                app:backgroundTint="#BB86FC" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_button"
                android:backgroundTint="@color/purple_200"
                android:onClick="onDigitPress"
                android:text="@string/six"
                android:textSize="30sp"
                app:backgroundTint="#BB86FC" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_button"
                android:backgroundTint="@color/purple_200"
                android:onClick="onDigitPress"
                android:text="@string/div"
                android:textSize="30sp"
                app:backgroundTint="#BB86FC" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_button"
                android:backgroundTint="@color/purple_200"
                android:onClick="onDigitPress"
                android:text="@string/one"
                android:textSize="30sp"
                app:backgroundTint="#BB86FC" />

            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_button"
                android:backgroundTint="@color/purple_200"
                android:onClick="onDigitPress"
                android:text="@string/two"
                android:textSize="30sp"
                app:backgroundTint="#BB86FC" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_button"
                android:backgroundTint="@color/purple_200"
                android:onClick="onDigitPress"
                android:text="@string/three"
                android:textSize="30sp"
                app:backgroundTint="#BB86FC" />

            <Button
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_button"
                android:backgroundTint="@color/purple_200"
                android:onClick="onDigitPress"
                android:text="@string/multi"
                android:textSize="30sp"
                app:backgroundTint="#BB86FC" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button13"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_button"
                android:backgroundTint="@color/purple_200"
                android:onClick="onPlusMinusClick"
                android:text="@string/posneg"
                android:textSize="30sp"
                app:backgroundTint="#BB86FC" />

            <Button
                android:id="@+id/button14"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_button"
                android:backgroundTint="@color/purple_200"
                android:onClick="onDigitPress"
                android:text="@string/zero"
                android:textSize="30sp"
                app:backgroundTint="#BB86FC" />

            <Button
                android:id="@+id/button15"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_button"
                android:backgroundTint="@color/purple_200"
                android:onClick="onDigitPress"
                android:text="@string/decimal"
                android:textSize="30sp"
                app:backgroundTint="#BB86FC" />

            <Button
                android:id="@+id/button16"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_button"
                android:backgroundTint="@color/purple_200"
                android:onClick="equalsClick"
                android:text="@string/equals"
                android:textSize="30sp"
                app:backgroundTint="#BB86FC" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/CalculatorText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>